--- a/02-explore/04-lesson/02-04-lesson.Rmd
+++ b/02-explore/04-lesson/02-04-lesson.Rmd
@@ -28,10 +28,10 @@ knitr::opts_chunk$set(
 
 options(max.print = 4000)
 
-email <- email %>%
+email <- email |>
   mutate(spam = if_else(spam == 0, "not spam", "spam"))
 
-comics <- read_csv("data/comics.csv") %>%
+comics <- read_csv("data/comics.csv") |>
   filter(!is.na(appearances))
 ```
 
@@ -72,68 +72,68 @@ Using the `email` dataset:
   
 ```{r ex1, exercise = TRUE}
 # Compute summary statistics
-email %>%
-  ___ %>%
+email |>
+  ___ |>
   ___
 
 # Create plot
-email %>%
-  mutate(log_num_char = ___) %>%
+email |>
+  mutate(log_num_char = ___) |>
   ggplot(aes(x = ___, y = log_num_char)) +
   ___
 ```
 
 ```{r ex1-hint-1}
 # Compute summary statistics
-email %>%
-  group_by(spam) %>%
+email |>
+  group_by(spam) |>
   ___
 
 # Create plot
-email %>%
-  mutate(log_num_char = ___) %>%
+email |>
+  mutate(log_num_char = ___) |>
   ggplot(aes(x = ___, y = log_num_char)) +
   ___
 ```
 
 ```{r ex1-hint-2}
 # Compute summary statistics
-email %>%
-  group_by(spam) %>%
+email |>
+  group_by(spam) |>
   summarize(median(num_char),
             IQR(num_char))
 
 # Create plot
-email %>%
-  mutate(log_num_char = ___) %>%
+email |>
+  mutate(log_num_char = ___) |>
   ggplot(aes(x = ___, y = log_num_char)) +
   ___
 ```
 
 ```{r ex1-hint-3}
 # Compute summary statistics
-email %>%
-  group_by(spam) %>%
+email |>
+  group_by(spam) |>
   summarize(median(num_char),
             IQR(num_char))
 
 # Create plot
-email %>%
-  mutate(log_num_char = log(___)) %>%
+email |>
+  mutate(log_num_char = log(___)) |>
   ggplot(aes(x = ___, y = log_num_char)) +
   ___
 ```
 
 ```{r ex1-solution}
 # Compute summary statistics
-email %>%
-  group_by(spam) %>%
+email |>
+  group_by(spam) |>
   summarize(median(num_char),
             IQR(num_char))
 
 # Create plot
-email %>%
-  mutate(log_num_char = log(num_char)) %>%
+email |>
+  mutate(log_num_char = log(num_char)) |>
   ggplot(aes(x = spam, y = log_num_char)) +
   geom_boxplot()
 ```
@@ -141,8 +141,8 @@ email %>%
 ### Spam and num_char interpretation
 
 ```{r mc1-pre}
-email %>%
-  mutate(log_num_char = log(num_char)) %>%
+email |>
+  mutate(log_num_char = log(num_char)) |>
   ggplot(aes(x = spam, y = log_num_char)) +
   geom_boxplot()
 ```
@@ -192,28 +192,28 @@ The `email` dataset is still available in your workspace.
 
 ```{r ex2-solution}
 # Compute center and spread for exclaim_mess by spam
-email %>%
-  group_by(spam) %>%
+email |>
+  group_by(spam) |>
   summarize(median(exclaim_mess),
             IQR(exclaim_mess))
 
 # Create plot for spam and exclaim_mess
-email %>%
-  mutate(log_exclaim_mess = log(exclaim_mess + 0.01)) %>%
+email |>
+  mutate(log_exclaim_mess = log(exclaim_mess + 0.01)) |>
   ggplot(aes(x = log_exclaim_mess)) +
   geom_histogram() +
   facet_wrap(~ spam)
 
 # Alternative plot: side-by-side box plots
-email %>%
-  mutate(log_exclaim_mess = log(exclaim_mess + 0.01)) %>%
+email |>
+  mutate(log_exclaim_mess = log(exclaim_mess + 0.01)) |>
   ggplot(aes(x = 1, y = log_exclaim_mess)) +
   geom_boxplot() +
   facet_wrap(~ spam)
 
 # Alternative plot: Overlaid density plots
-email %>%
-  mutate(log_exclaim_mess = log(exclaim_mess + .01)) %>%
+email |>
+  mutate(log_exclaim_mess = log(exclaim_mess + .01)) |>
   ggplot(aes(x = log_exclaim_mess, fill = spam)) +
   geom_density(alpha = 0.3)
 ```
@@ -221,8 +221,8 @@ email %>%
 ### Spam and !!! interpretation
 
 ```{r mc2-pre}
-email %>%
-  mutate(log_exclaim_mess = log(exclaim_mess + .01)) %>%
+email |>
+  mutate(log_exclaim_mess = log(exclaim_mess + .01)) |>
   ggplot(aes(x = log_exclaim_mess)) +
   geom_histogram(binwidth = 0.5) +
   facet_wrap(~spam)
@@ -252,13 +252,13 @@ When you looked at the distribution of spam and the number of exclamation marks 
 The dominant feature of the exclaim mess variable, though, is the large proportion of cases that report zero or on this log scale, -4.6 exclamation marks. This is a common occurrence in data analysis that is often termed "zero-inflation", and there are several common ways to think about those zeros.
 
 ```{r}
-p1 <- email %>% 
-  mutate(log_num_char = log(num_char)) %>% 
+p1 <- email |> 
+  mutate(log_num_char = log(num_char)) |> 
   ggplot(aes(y = spam , x = log_num_char)) +
   geom_boxplot()
 
-p2 <- email %>% 
-  mutate(log_exclaim_mess = log(exclaim_mess+0.01)) %>% 
+p2 <- email |> 
+  mutate(log_exclaim_mess = log(exclaim_mess+0.01)) |> 
   ggplot(aes(x = log_exclaim_mess)) +
   geom_histogram(binwidth = 0.5)+
   facet_wrap(~spam)
@@ -271,10 +271,10 @@ p1 / p2
 One approach says that there are two mechanisms going on: one generating the zeros and the other generating the non-zeros, so we will analyze these two groups separately. A simpler approach is to think of the variable as two level categorical variable (zero or not zero) and to treat it like a categorical variable.
 
 ```{r 9, fig.asp = 0.5, warning=FALSE}
-email2 <- email %>%
+email2 <- email |>
   mutate(zero = exclaim_mess == 1, log_exclaim_mess = log(exclaim_mess))
 
-email2 %>% 
+email2 |> 
   ggplot(aes(x = log_exclaim_mess, fill = zero)) +
   geom_histogram(binwidth = 0.5)+
   facet_wrap(~spam)+
@@ -286,8 +286,8 @@ email2 %>%
 To do so we create a new variable, we'll call it `zero` and use it to color in our bar chart.
 
 ```{r facet, fig.asp = 0.5, echo=TRUE}
-email %>%
-  mutate(zero = exclaim_mess == 0) %>%
+email |>
+  mutate(zero = exclaim_mess == 0) |>
   ggplot(aes(x = zero, fill = zero)) +
   geom_bar() +
   facet_wrap(~spam)
@@ -300,8 +300,8 @@ In the resulting plot, yes, we've lost a lot of information. But it's become ver
 Another way that we've seen is using a stacked bar chart. For that plot, you move the second variable from the facet layer to the fill argument inside the aesthetics function. 
 
 ```{r, echo=TRUE}
-email %>%
-  mutate(zero = exclaim_mess == 0) %>%
+email |>
+  mutate(zero = exclaim_mess == 0) |>
   ggplot(aes(x = zero, fill = spam)) +
   geom_bar()
 ```
@@ -309,8 +309,8 @@ email %>%
 The other consideration you have to make is if you're more interested in counts or proportions. If the latter, you'll want to normalize the plot, which you can do by adding the position equals fill argument to `geom_bar()`. The result is a series of conditional proportions, where you're conditioning on whichever variable you're in.
 
 ```{r, echo=TRUE}
-email %>%
-  mutate(zero = exclaim_mess == 0) %>%
+email |>
+  mutate(zero = exclaim_mess == 0) |>
   ggplot(aes(x = zero, fill = spam)) +
   geom_bar(position = "fill")
 ```
@@ -320,7 +320,7 @@ email %>%
 If it was difficult to work with the heavy skew of `exclaim_mess`, the number of images attached to each email (`image`) poses even more of a challenge. Run the following code to get a sense of its distribution: 
 
 ```{r count-images, exercise = TRUE}
-email %>%
+email |>
   count(image)
 ```
 
@@ -333,30 +333,30 @@ Starting with `email`, form a continuous chain that links together the following
 
 ```{r ex3, exercise = TRUE}
 # Create plot of proportion of spam by image
-email %>%
-  mutate(has_image = ___) %>%
+email |>
+  mutate(has_image = ___) |>
   ggplot(aes(x = ___, fill = ___)) +
   geom_bar(position = ___)
 ```
 
 ```{r ex3-hint-1}
-email %>%
-  mutate(has_image = image > 0) %>%
+email |>
+  mutate(has_image = image > 0) |>
   ggplot(aes(x = ___, fill = ___)) +
   geom_bar(position = ___)
 ```
 
 ```{r ex3-hint-2}
-email %>%
-  mutate(has_image = image > 0) %>%
+email |>
+  mutate(has_image = image > 0) |>
   ggplot(aes(x = ___, fill = ___)) +
   geom_bar(position = "fill")
 ```
 
 ```{r ex3-solution}
 # Create plot of proportion of spam by image
-email %>%
-  mutate(has_image = image > 0) %>%
+email |>
+  mutate(has_image = image > 0) |>
   ggplot(aes(x = has_image, fill = spam)) +
   geom_bar(position = "fill")
 ```
@@ -364,8 +364,8 @@ email %>%
 ### Image and spam interpretation
 
 ```{r mc3-pre}
-email %>%
-  mutate(has_image = image > 0) %>%
+email |>
+  mutate(has_image = image > 0) |>
   ggplot(aes(x = has_image, fill = spam)) +
   geom_bar(position = "fill")
 ```
@@ -388,16 +388,16 @@ In the process of exploring a dataset, you'll sometimes come across something th
 You can formulate a test to ensure this variable is behaving as we expect:
 
 ```{r logical, echo=TRUE}
-email %>%
-  mutate(num_char_check = num_char < 0) %>%
+email |>
+  mutate(num_char_check = num_char < 0) |>
   select(num_char_check)
 ```
 
 If the entire dataset was printed out, you'd see a long vector of 3921 logical values indicating for each case in the dataset whether that condition is `TRUE`. Here, the first 10 values all appear to be `FALSE`. To verify that *all* of the cases indeed have non-negative values for `num_char`, we can take the *sum* of this vector:
 
 ```{r num-logical, echo=TRUE}
-email %>%
-  mutate(num_char_check = num_char < 0) %>%
+email |>
+  mutate(num_char_check = num_char < 0) |>
   summarize(sum(num_char_check))
 ```
 
@@ -409,36 +409,36 @@ Design a simple test to determine if images count as attached files. This involv
 
 ```{r ex4, exercise = TRUE}
 # Test if images count as attachments
-email %>%
-  mutate(image_gt_attach = ___) %>%
+email |>
+  mutate(image_gt_attach = ___) |>
   summarize(___)
 ```
 
 ```{r ex4-hint-1}
 # Test if images count as attachments
-email %>%
-  mutate(image_gt_attach = (___ > ___)) %>%
+email |>
+  mutate(image_gt_attach = (___ > ___)) |>
   summarize(___)
 ```
 
 ```{r ex4-hint-2}
 # Test if images count as attachments
-email %>%
-  mutate(image_gt_attach = (image > attach)) %>%
+email |>
+  mutate(image_gt_attach = (image > attach)) |>
   summarize(___)
 ```
 
 ```{r ex4-hint-3}
 # Test if images count as attachments
-email %>%
-  mutate(image_gt_attach = (image > attach)) %>%
+email |>
+  mutate(image_gt_attach = (image > attach)) |>
   summarize(sum(image_gt_attach))
 ```
 
 ```{r ex4-solution}
 # Test if images count as attachments
-email %>%
-  mutate(image_gt_attach = (image > attach)) %>%
+email |>
+  mutate(image_gt_attach = (image > attach)) |>
   summarize(sum(image_gt_attach))
 ```
 
@@ -451,9 +451,9 @@ When you have a specific question about a dataset, you can find your way to an a
 This can be answered with the following chain:
 
 ```{r chain, echo=TRUE}
-email %>%
-   filter(spam == "not spam") %>%
-   group_by(to_multiple) %>%
+email |>
+   filter(spam == "not spam") |>
+   group_by(to_multiple) |>
    summarize(median(num_char))
 ```
    
@@ -467,84 +467,84 @@ Build a chain to answer each of the following questions, both about the variable
 
 ```{r ex5, exercise = TRUE}
 # Question 1
-email %>%
-  filter(___) %>%
-  group_by(___) %>%
+email |>
+  filter(___) |>
+  group_by(___) |>
   summarize(___)
 
 # Question 2
-email %>%
-  filter(___) %>%
+email |>
+  filter(___) |>
   ggplot(aes(x = ___)) +
   geom_bar()
 ```
 
 ```{r ex5-hint-1}
 # Question 1
-email %>%
-  filter(dollar > 0) %>%
-  group_by(___) %>%
+email |>
+  filter(dollar > 0) |>
+  group_by(___) |>
   summarize(___)
 
 # Question 2
-email %>%
-  filter(___) %>%
+email |>
+  filter(___) |>
   ggplot(aes(x = ___)) +
   geom_bar()
 ```
 
 ```{r ex5-hint-2}
 # Question 1
-email %>%
-  filter(dollar > 0) %>%
-  group_by(spam) %>%
+email |>
+  filter(dollar > 0) |>
+  group_by(spam) |>
   summarize(___)
 
 # Question 2
-email %>%
-  filter(___) %>%
+email |>
+  filter(___) |>
   ggplot(aes(x = ___)) +
   geom_bar()
 ```
 
 ```{r ex5-hint-3}
 # Question 1
-email %>%
-  filter(dollar > 0) %>%
-  group_by(spam) %>%
+email |>
+  filter(dollar > 0) |>
+  group_by(spam) |>
   summarize(median(dollar))
 
 # Question 2
-email %>%
-  filter(___) %>%
+email |>
+  filter(___) |>
   ggplot(aes(x = ___)) +
   geom_bar()
 ```
 
 ```{r ex5-hint-4}
 # Question 1
-email %>%
-  filter(dollar > 0) %>%
-  group_by(spam) %>%
+email |>
+  filter(dollar > 0) |>
+  group_by(spam) |>
   summarize(median(dollar))
 
 # Question 2
-email %>%
-  filter(dollar > 10) %>%
+email |>
+  filter(dollar > 10) |>
   ggplot(aes(x = ___)) +
   geom_bar()
 ```
 
 ```{r ex5-solution}
 # Question 1
-email %>%
-  filter(dollar > 0) %>%
-  group_by(spam) %>%
+email |>
+  filter(dollar > 0) |>
+  group_by(spam) |>
   summarize(median(dollar))
 
 # Question 2
-email %>%
-  filter(dollar > 10) %>%
+email |>
+  filter(dollar > 10) |>
   ggplot(aes(x = spam)) +
   geom_bar()
 ```
@@ -558,8 +558,8 @@ Let's revisit the exercise where you explored the association between whether an
 The plot you created was this bar chart of proportions. We want to emphasize an important, but subtle distinction when discussing proportions like this. This plot shows the proportions of spam or not spam within the subsets of emails that either have an image or do not. Said another way, they are conditioned on the has image variable. We get a slightly different story if we exchange the variables so that we condition on spam. Among emails that are spam, almost none of them have an image, while the proportion within non-spam is larger, but still less than 5%. If you're building a spam filter, a situation where you don't actually get to see the value of spam, it'd make more sense to think about conditioning on the has image variable.
 
 ```{r echo=TRUE}
-email %>%
-  mutate(has_image = image == 1) %>%
+email |>
+  mutate(has_image = image == 1) |>
   ggplot(aes(x = has_image, fill = spam)) +
   geom_bar(position = "fill")
 ```
@@ -567,8 +567,8 @@ email %>%
 In this case, we can tell that this variable would be an awful spam filter by itself.
 
 ```{r echo=TRUE}
-email %>%
-  mutate(has_image = image == 1) %>%
+email |>
+  mutate(has_image = image == 1) |>
   ggplot(aes(x = spam, fill = has_image)) +
   geom_bar(position = "fill")
 ```
@@ -588,7 +588,7 @@ knitr::include_graphics("images/switch-bars.png")
 The first step is to save the mutated categorical variable back into the dataset. The ordering of the bars isn't determined within the code for the plot, but in the way that R represents that variable. If we call levels on the new variable, it returns NULL. 
 
 ```{r echo=TRUE}
-email <- email %>%
+email <- email |>
   mutate(zero = exclaim_mess == 0)
 
 levels(email$zero)
@@ -597,7 +597,7 @@ levels(email$zero)
 This is because this variable is actually a logical variable, not a factor. To set the ordering of the levels, let's make it a character variable and then change the order of its levels with the `fct_relevel()` function from the **forcats** package.
 
 ```{r echo=TRUE}
-email <- email %>%
+email <- email |>
   mutate(
     zero = if_else(exclaim_mess == 0, "TRUE", "FALSE"),
     zero = fct_relevel(zero, "TRUE", "FALSE")
@@ -607,7 +607,7 @@ email <- email %>%
 Now, when we go to make the plot with the same code, the order of the bars are as we wan them.
 
 ```{r echo=TRUE, fig.asp = 0.5}
-email %>%
+email |>
   ggplot(aes(x = zero)) +
   geom_bar() +
   facet_wrap(~spam)
@@ -686,15 +686,15 @@ We started with categorical data, often the domain of the pie chart, and hopeful
 Let's take a look at a comparison of pie vs. bar charts for data on identities of superheroes from comics. We will be visualizing the following distribution. 
 
 ```{r}
-comics %>%
+comics |>
   count(id)
 ```
 
 On the pie chart, it's quite difficult to tell how the `NA` group compares to the `Public` group, but this comparison is much easier in the bar plot. Also `Unknown` is barely visible in the bar plot and almost not there in the pie chart.
 
 ```{r out.width = "100%"}
-p1 <- comics %>%
-  count(id) %>%
+p1 <- comics |>
+  count(id) |>
   ggplot(aes(x = "", y = n, fill = id))+
   geom_bar(stat="identity", width = 1)+
   coord_polar("y", start = 0) +
@@ -762,8 +762,8 @@ ggplot(comics, aes(x = appearances, y = id)) +
 In the third lesson, we discussed the common numerical measures of a distribution: measures of center, variability, shape, plus the presence of outliers. Our life was made much easier by using the combination of `group_by()` and `summarize()` to compute statistics on different groups within our data.
 
 ```{r, echo=TRUE}
-comics %>%
-  group_by(id) %>%
+comics |>
+  group_by(id) |>
   summarise(
     mean = mean(appearances),
     median = median(appearances)
